check_output_utf8.txt
cargo :     Checking mtt-file-manager v0.1.0 
(C:\MTT File Manager)
At line:1 char:1
+ cargo check --release > check_output.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  
      Checking mt...T File Manager):String) [  
  ], RemoteException
    + FullyQualifiedErrorId : NativeCommandErr 
   or
 
error[E0412]: cannot find type `ITEMIDLIST` in 
this scope
  --> 
src\infrastructure\windows\native_menu.rs:33:28
   |
33 |         let mut pidl: *mut ITEMIDLIST = 
std::ptr::null_mut();
   |                            ^^^^^^^^^^ not 
found in this scope
   |
help: consider importing this struct
   |
 4 + use crate::infrastructure::windows::native
_menu::Common::ITEMIDLIST;
   |

error[E0412]: cannot find type `ITEMIDLIST` in 
this scope
  --> 
src\infrastructure\windows\native_menu.rs:41:29
   |
41 |         let mut child: *mut ITEMIDLIST = 
std::ptr::null_mut();
   |                             ^^^^^^^^^^ 
not found in this scope
   |
help: consider importing this struct
   |
 4 + use crate::infrastructure::windows::native
_menu::Common::ITEMIDLIST;
   |

error[E0412]: cannot find type `ITEMIDLIST` in 
this scope
  --> 
src\infrastructure\windows\native_menu.rs:43:32
   |
43 |         let items_ptr: [*const 
ITEMIDLIST; 1] = [child as *const ITEMIDLIST];
   |                                ^^^^^^^^^^ 
not found in this scope
   |
help: consider importing this struct
   |
 4 + use crate::infrastructure::windows::native
_menu::Common::ITEMIDLIST;
   |

error[E0412]: cannot find type `ITEMIDLIST` in 
this scope
  --> 
src\infrastructure\windows\native_menu.rs:43:66
   |
43 |         let items_ptr: [*const 
ITEMIDLIST; 1] = [child as *const ITEMIDLIST];
   |                                           
                       ^^^^^^^^^^ not found in 
this scope
   |
help: consider importing this struct
   |
 4 + use crate::infrastructure::windows::native
_menu::Common::ITEMIDLIST;
   |

error[E0412]: cannot find type 
`ContextMenuItem` in this scope
  --> src\ui\context_menu.rs:74:42
   |
74 | fn render_item(ui: &mut egui::Ui, item: 
&ContextMenuItem, action: &mut Option<i32>) -> 
bool {
   |                                          
^^^^^^^^^^^^^^^
   |
  ::: src\application\context_menu.rs:19:1
   |
19 | pub struct ContextMenuState {
   | --------------------------- similarly 
named struct `ContextMenuState` defined here
   |
help: a struct with a similar name exists
   |
74 - fn render_item(ui: &mut egui::Ui, item: 
&ContextMenuItem, action: &mut Option<i32>) -> 
bool {
74 + fn render_item(ui: &mut egui::Ui, item: 
&ContextMenuState, action: &mut Option<i32>) 
-> bool {
   |
help: consider importing this struct through 
its public re-export
   |
 4 + use crate::application::ContextMenuItem;
   |

warning: unused import: 
`Win32::Graphics::Gdi::*`
 --> 
src\infrastructure\windows\native_menu.rs:8:40
  |
8 |     Win32::UI::WindowsAndMessaging::*, 
Win32::Graphics::Gdi::*,
  |                                        
^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `std::path::PathBuf`
 --> src\ui\context_menu.rs:5:5
  |
5 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound 
`application::context_menu::ContextMenuState: 
Clone` is not satisfied
  --> src\application\state.rs:52:5
   |
19 | #[derive(Clone, Debug)]
   |          ----- in this derive macro 
expansion
...
52 |     pub context_menu: ContextMenuState,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
unsatisfied trait bound
   |
help: the trait `Clone` is not implemented for 
`application::context_menu::ContextMenuState`
  --> src\application\context_menu.rs:19:1
   |
19 | pub struct ContextMenuState {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: 
`application::context_menu::ContextMenuState` 
doesn't implement `std::fmt::Debug`
  --> src\application\state.rs:52:5
   |
19 | #[derive(Clone, Debug)]
   |                 ----- in this derive 
macro expansion
...
52 |     pub context_menu: ContextMenuState,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
unsatisfied trait bound
   |
help: the trait `std::fmt::Debug` is not 
implemented for 
`application::context_menu::ContextMenuState`
  --> src\application\context_menu.rs:19:1
   |
19 | pub struct ContextMenuState {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: add `#[derive(Debug)]` to 
`application::context_menu::ContextMenuState` 
or manually `impl std::fmt::Debug for 
application::context_menu::ContextMenuState`

error[E0308]: mismatched types
  --> 
src\infrastructure\windows\native_menu.rs:83:38
   |
83 |     let is_separator = (info.fType & 
MFT_SEPARATOR.0) != 0;
   |                         ----------   
^^^^^^^^^^^^^^^ expected `MENU_ITEM_TYPE`, 
found `u32`
   |                         |
   |                         expected because 
this is `MENU_ITEM_TYPE`
   |
help: consider removing the tuple struct field 
`0`
   |
83 -     let is_separator = (info.fType & 
MFT_SEPARATOR.0) != 0;
83 +     let is_separator = (info.fType & 
MFT_SEPARATOR) != 0;
   |

error[E0308]: mismatched types
  --> 
src\infrastructure\windows\native_menu.rs:83:58
   |
83 |     let is_separator = (info.fType & 
MFT_SEPARATOR.0) != 0;
   |                        
------------------------------    ^ expected 
`MENU_ITEM_TYPE`, found integer
   |                        |
   |                        expected because 
this is `MENU_ITEM_TYPE`
   |
help: try wrapping the expression in `windows::
Win32::UI::WindowsAndMessaging::MENU_ITEM_TYPE`
   |
83 |     let is_separator = (info.fType & 
MFT_SEPARATOR.0) != windows::Win32::UI::Windows
AndMessaging::MENU_ITEM_TYPE(0);
   |                                           
               ++++++++++++++++++++++++++++++++
++++++++++++++++++++++++ +

error[E0308]: mismatched types
  --> 
src\infrastructure\windows\native_menu.rs:84:37
   |
84 |     let is_enabled = (info.fState & 
MFS_DISABLED.0) == 0;
   |                       -----------   
^^^^^^^^^^^^^^ expected `MENU_ITEM_STATE`, 
found `u32`
   |                       |
   |                       expected because 
this is `MENU_ITEM_STATE`
   |
help: consider removing the tuple struct field 
`0`
   |
84 -     let is_enabled = (info.fState & 
MFS_DISABLED.0) == 0;
84 +     let is_enabled = (info.fState & 
MFS_DISABLED) == 0;
   |

error[E0308]: mismatched types
  --> 
src\infrastructure\windows\native_menu.rs:84:56
   |
84 |     let is_enabled = (info.fState & 
MFS_DISABLED.0) == 0;
   |                      
------------------------------    ^ expected 
`MENU_ITEM_STATE`, found integer
   |                      |
   |                      expected because 
this is `MENU_ITEM_STATE`
   |
help: try wrapping the expression in `windows::
Win32::UI::WindowsAndMessaging::MENU_ITEM_STATE
`
   |
84 |     let is_enabled = (info.fState & 
MFS_DISABLED.0) == windows::Win32::UI::WindowsA
ndMessaging::MENU_ITEM_STATE(0);
   |                                           
             ++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++ +

error[E0599]: no method named `is_null` found 
for struct `Gdi::HBITMAP` in the current scope
  --> 
src\infrastructure\windows\native_menu.rs:97:39
   |
97 |     let icon_rgba = if 
!info.hbmpItem.is_null() && info.hbmpItem.0 != 
HBMMENU_CALLBACK.0 {
   |                                       
^^^^^^^ method not found in `Gdi::HBITMAP`
   |
help: one of the expressions' fields has a 
method of the same name
   |
97 |     let icon_rgba = if 
!info.hbmpItem.0.is_null() && info.hbmpItem.0 
!= HBMMENU_CALLBACK.0 {
   |                                       ++

error[E0599]: no method named `is_null` found 
for struct `WindowsAndMessaging::HMENU` in the 
current scope
   --> src\infrastructure\windows\native_menu.r
s:104:23
    |
104 |     if !info.hSubMenu.is_null() {
    |                       ^^^^^^^ method not 
found in `WindowsAndMessaging::HMENU`
    |
help: one of the expressions' fields has a 
method of the same name
    |
104 |     if !info.hSubMenu.0.is_null() {
    |                       ++

error[E0282]: type annotations needed
  --> src\ui\context_menu.rs:93:47
   |
93 |                 
egui::load::SizedTexture::new(tex.id(), 
egui::vec2(16.0, 16.0)),
   |                                           
    ^^^ cannot infer type

Some errors have detailed explanations: E0277, 
E0282, E0308, E0412, E0599.
For more information about an error, try 
`rustc --explain E0277`.
warning: `mtt-file-manager` (lib) generated 2 
warnings
error: could not compile `mtt-file-manager` 
(lib) due to 14 previous errors; 2 warnings 
emitted
